test/netlist/error/freevar-unused.bop
A(a) = b
with unused = c
where
  b = Not(a);
end where;
